[tool.poetry]
name = "osx-dev-setup"
version = "0.1.0"
description = "Set up my osx dev machine"
authors = ["Artur Daschevici <a.daschevici@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
ansible = "^5.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
